# tcga-pathology-extraction

./: .env.template  .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb  03_evaluation.ipynb  06_cross_run_comparison.ipynb  07_embedding_comparison.ipynb
specs/: mission.md  roadmap.md  tech-stack.md
src/: annotate_eval_set.py  features.py  schema.py  test_prompt.py
src/evaluation/: hitl_thresholds.py  metrics.py  model_comparison.py  recompute.py  semantic.py  stratifier.py
src/monitoring/: field_null_rate_monitor.py  hallucination_alert.py  pass_rate_monitor.py  run_monitors.py  tier1_drift.py  token_usage_monitor.py
src/pipeline/: loader.py  mlflow_tracker.py  model_caller.py  prompt_constructor.py  result_writer.py  run_pipeline.py  validator.py
src/prompts/: extraction.txt  extraction_v1.0.txt  extraction_v1.1.txt  extraction_v1.2.txt  extraction_v1.3.txt  extraction_v1.4.txt  extraction_v1.5.txt  extraction_v1.6.txt  extraction_v1.8.txt  extraction_v1.9.txt
tests/: test_mlflow_tracker.py  test_monitors.py  test_schema.py
tests/evaluation/: test_hitl_thresholds.py  test_metrics.py  test_model_comparison.py  test_semantic.py  test_stratifier.py
tests/pipeline/: test_loader.py  test_model_caller.py  test_prompt_constructor.py  test_result_writer.py  test_validator.py
