[project]
name = "tcga-pathology-extraction"
version = "0.1.0"
description = "LLM pipeline to extract clinical registry fields from TCGA pathology reports"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.0",
    "mlflow>=2.0",
    "pandas>=2.0",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
    "jupyter>=1.0",
    "tqdm>=4.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.9",
    "numpy>=1.26.4",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: needs the real SapBERT model (downloads ~400MB on first run)",
]
addopts = "-m 'not slow'"
